--- a/Strona.html
+++ b/Strona.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Kamack38!</h1>
   
-  <video src="img/video.mp4" class="video" autoplay="autoplay" loop="loop"></video>
+  <video src="video/sd.mp4" class="video" autoplay="autoplay" loop="loop"></video>
 
   <br />
 
