--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png">
-    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
     <link rel="stylesheet" href="css/fontello.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
 
@@ -43,6 +43,9 @@
       <div style="clear: both;"></div>
     </div>
 
+    Hej! Cześć! Witajcie z tej strony Kamack38. Mam 13 lat i mam na imię Krzysztof. Mieszkam w centrum Wrocławia.
+    Lubię grać w gry między innymi Counter Strike:Global Offensive, Minecraft, Satisfactory, GTA V i wiele innych...
+    Właśnie dlatego zacząłem nagrywać do YouTube.
     <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
 <i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
 
