--- a/files.html
+++ b/files.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png">
-    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
     <link rel="stylesheet" href="css/fontello.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
 
@@ -41,11 +41,22 @@
     <div class="rectangle">
       <div id="csgo">CS:GO</div>
       <div style="clear: both;"></div>
+      <a href="http://www.mediafire.com/file/noljyhv53mvr1x5/csgo.cfg/file" target="_blank" class="tilelink">
+        <div class="tile6">
+          CS:GO Config
+        </div>
+      </a>
     </div>
 
+    
     <div class="rectangle">
-      <div id="satisfontory">Satisfactory</div>
+      <div id="satis">Satisfactory</div>
       <div style="clear: both;"></div>
+      <a href="http://www.mediafire.com/file/f706mkihi31psq0/YT.sav/file" target="_blank" class="tilelink">
+        <div class="tile6">
+          Save
+        </div>
+      </a>
     </div>
 
     <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
