--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png">
-    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
     <link rel="stylesheet" href="css/fontello.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
 
@@ -27,11 +27,13 @@
 <body onload="odliczanie();">
 
   <div id="container"> 
-    <div class="rectangle">
-      <div id="logo"><a href="home" class="tilelink">Kamack38</a></div>
-      <div id="zegar">12:00:00</div>
-      <div style="clear: both;"></div>
-    </div>
+  	<header>
+	    <div class="rectangle">
+	      <div id="logo"><a href="home" class="tilelink">Kamack38</a></div>
+	      <div id="zegar">12:00:00</div>
+	      <div style="clear: both;"></div>
+	    </div>
+	</header>
 
     <div class="square">
       <a href="about-me" class="tilelink">
@@ -51,9 +53,9 @@
           <i class="icon-github-circled"></i><br />Mój GitHUB
         </div>
       </a>
-      <a href="https://www.reddit.com/user/kamack38" target="_blank" class="tilelink">
+      <a href="https://kamack38shop.90.pl/" target="_blank" class="tilelink">
         <div class="tile3">
-          <i class="icon-reddit"></i><br />Reddit
+          <img src="img/selino.png" width="100" height="100"><br />Sklep z Koszulkami
         </div>
       </a>
       <div style="clear: both;"></div>
