--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@
       <div style="clear: both;"></div>
     </div>
 
-    <a href="" class="tilelink">
+    <a href="index.html" class="tilelink">
       <i class="icon-left-open"></i>Porót do Strony Głównej
     </a>
 
