--- a/files.html
+++ b/files.html
@@ -29,12 +29,12 @@
   <div id="container"> 
 
     <div class="rectangle">
-      <div id="logo"><a href="" class="tilelink">Kamack38</a></div>
+      <div id="logo"><a href="index.html" class="tilelink">Kamack38</a></div>
       <div id="zegar">12:00:00</div>
       <div style="clear: both;"></div>
     </div>
 
-    <a href="" class="tilelink">
+    <a href="index.html" class="tilelink">
       <i class="icon-left-open"></i>Porót do Strony Głównej
     </a>
 
