--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
   <div id="container"> 
   	<header>
 	    <div class="rectangle">
-	      <div id="logo"><a href="home" class="tilelink">Kamack38</a></div>
+	      <div id="logo"><a href="index.html" class="tilelink">Kamack38</a></div>
 	      <div id="zegar">12:00:00</div>
 	      <div style="clear: both;"></div>
 	    </div>
 	</header>
 
     <div class="square">
-      <a href="about-me" class="tilelink">
+      <a href="aboutme.html" class="tilelink">
         <div class="tile1">
           <i class="icon-user"></i><br />O mnie
         </div>
       </a>
-      <a href="files" class="tilelink">
+      <a href="files.html" class="tilelink">
         <div class="tile1">
           <i class="icon-doc"></i><br />Pliki
         </div>
