--- a/files.html
+++ b/files.html
@@ -39,7 +39,9 @@
     </a>
 
     <div class="rectangle">
-      <div id="csgo">CS:GO</div>
+      <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" class="tilelink">
+        <div id="csgo">CS:GO</div>
+      </a>
       <div style="clear: both;"></div>
       <a href="http://www.mediafire.com/file/noljyhv53mvr1x5/csgo.cfg/file" target="_blank" class="tilelink">
         <div class="tile6">
@@ -50,7 +52,9 @@
 
     
     <div class="rectangle">
-      <div id="satis">Satisfactory</div>
+      <a href="https://store.steampowered.com/app/526870/Satisfactory/" class="tilelink">
+        <div id="satis">Satisfactory</div>
+      </a>
       <div style="clear: both;"></div>
       <a href="http://www.mediafire.com/file/f706mkihi31psq0/YT.sav/file" target="_blank" class="tilelink">
         <div class="tile6">
