--- a/files.html
+++ b/files.html
@@ -39,7 +39,7 @@
     </a>
 
     <div class="rectangle">
-      <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" class="tilelink">
+      <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" class="tilelink" target="_blank">
         <div id="csgo">CS:GO</div>
       </a>
       <div style="clear: both;"></div>
@@ -52,7 +52,7 @@
 
     
     <div class="rectangle">
-      <a href="https://store.steampowered.com/app/526870/Satisfactory/" class="tilelink">
+      <a href="https://store.steampowered.com/app/526870/Satisfactory/" class="tilelink" target="_blank">
         <div id="satis">Satisfactory</div>
       </a>
       <div style="clear: both;"></div>
