--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
     Hej! Cześć! Witajcie z tej strony Kamack38. Mam 13 lat i mam na imię Krzysztof. Mieszkam w centrum Wrocławia.
     Lubię grać w gry między innymi Counter Strike:Global Offensive, Minecraft, Satisfactory, GTA V i wiele innych...
     Właśnie dlatego zacząłem nagrywać do YouTube.
-    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
+    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  (Beta)
 <i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
 
 
