--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <link rel="stylesheet" href="css/fontello.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
-    
+
     <script data-ad-client="ca-pub-7269424524322276" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <script src="js/timer.js"></script>
@@ -96,7 +96,7 @@
     </div>
     <div style="clear: both;"></div>
 
-    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
+    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy (Beta)
 <i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
 
 
