--- a/files.html
+++ b/files.html
@@ -63,7 +63,7 @@
       </a>
     </div>
 
-    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy (Beta)
+    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
 <i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
 
 
