--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <div style="clear: both;"></div>
 
-    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy (Beta)
+    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
 <i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
 
 
