--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kamack38 | Youtube | Polska</title>
     <meta name="description" content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!" />
     <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
