--- a/files.html
+++ b/files.html
@@ -43,9 +43,9 @@
         <div id="csgo">CS:GO</div>
       </a>
       <div style="clear: both;"></div>
-      <a href="http://www.mediafire.com/file/noljyhv53mvr1x5/csgo.cfg/file" target="_blank" class="tilelink">
+      <a href="https://settings.gg/kamack38" target="_blank" class="tilelink">
         <div class="tile6">
-          CS:GO Config
+          Ustawienia CS:GO
         </div>
       </a>
     </div>
