--- a/files.html
+++ b/files.html
@@ -62,7 +62,15 @@
         </div>
       </a>
     </div>
-
+<iframe 
+	src="https://player.twitch.tv/?channel=kamack38&parent=streamernews.example.com"
+	height="720"
+	width="1280"
+	frameborder="1"
+	scrolling="no"
+	allowfullscreen="true">
+</iframe>
+	  
     <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
 <i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
 
