--- a/files.html
+++ b/files.html
@@ -63,7 +63,7 @@
       </a>
     </div>
 <iframe 
-	src="https://player.twitch.tv/?channel=kamack38&parent=streamernews.example.com"
+	src="https://player.twitch.tv/?channel=kamack38&parent=kamack38.github.io"
 	height="720"
 	width="1280"
 	frameborder="1"
