--- a/files.html
+++ b/files.html
@@ -62,19 +62,18 @@
         </div>
       </a>
     </div>
-<iframe 
-	src="https://player.twitch.tv/?channel=kamack38&parent=kamack38.github.io"
+
+    <iframe 
+	src="https://player.twitch.tv/?channel=kamack38&parent=kamack38.github.io&autoplay=true"
 	height="720"
 	width="1280"
-	frameborder="1"
+	frameborder="0"
 	scrolling="no"
 	allowfullscreen="true">
-</iframe>
+    </iframe>
 	  
-    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
-<i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
-
-
+    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  <i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
+	  
   </div>
 </body>
 
