--- a/files.html
+++ b/files.html
@@ -43,7 +43,7 @@
         <div id="csgo">CS:GO</div>
       </a>
       <div style="clear: both;"></div>
-      <a href="https://settings.gg/kamack38" target="_blank" class="tilelink">
+      <a href="https://github.com/kamack38/csgo-config" target="_blank" class="tilelink">
         <div class="tile6">
           Ustawienia CS:GO
         </div>
