--- a/files.html
+++ b/files.html
@@ -56,7 +56,7 @@
         <div id="satis">Satisfactory</div>
       </a>
       <div style="clear: both;"></div>
-      <a href="http://www.mediafire.com/file/f706mkihi31psq0/YT.sav/file" target="_blank" class="tilelink">
+      <a href="https://www.mediafire.com/file/sj8l7v1sx6km9s8/fg.sav/file" target="_blank" class="tilelink">
         <div class="tile6">
           Save
         </div>
