--- a/index.html
+++ b/index.html
@@ -2,106 +2,101 @@
 <html lang="pl">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kamack38 | Youtube | Polska</title>
-    <meta name="description" content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!" />
-    <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png">
-    <link rel="stylesheet" href="style.css" type="text/css"/>
-    <link rel="stylesheet" href="css/fontello.css" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kamack38 | Youtube | Polska</title>
+  <meta name="description" content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!" />
+  <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <link rel="shortcut icon" href="img/LogoT.png">
+  <link rel="stylesheet" href="style.css" type="text/css" />
+  <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
 
-    <script data-ad-client="ca-pub-7269424524322276" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-7269424524322276" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <script src="js/timer.js"></script>
+  <script src="js/timer.js"></script>
 
-    <script>
-	    var currentTitle = document.title;
+  <script>
+    var currentTitle = document.title;
 
-	    window.onblur = function() { document.title = "We daj suba :D"; }
+    window.onblur = function () {
+      document.title = "We daj suba :D";
+    }
 
-	    window.onfocus = function() { document.title = currentTitle; }
-    </script>
+    window.onfocus = function () {
+      document.title = currentTitle;
+    }
+  </script>
 
 </head>
 
 <body onload="odliczanie();">
-
-  <div id="container"> 
-  	<header>
-	    <div class="rectangle">
-	      <div id="logo"><a href="index.html" class="tilelink">Kamack38</a></div>
-	      <div id="zegar">12:00:00</div>
-	      <div style="clear: both;"></div>
-	    </div>
-	</header>
-
-    <div class="square">
-      <a href="aboutme.html" class="tilelink">
-        <div class="tile1">
-          <i class="icon-user"></i><br />O mnie
-        </div>
-      </a>
-      <a href="files.html" class="tilelink">
-        <div class="tile1">
-          <i class="icon-doc"></i><br />Pliki
-        </div>
-      </a>
-      <div style="clear: both;"></div>
-
-      <a href="https://github.com/kamack38" target="_blank" class="tilelink">
-        <div class="tile2">
-          <i class="icon-github-circled"></i><br />Mój GitHUB
-        </div>
-      </a>
-      <a href="https://kamack38shop.90.pl/" target="_blank" class="tilelink">
-        <div class="tile3">
-          <img src="img/selino.png" width="100" height="100"><br />Sklep z Koszulkami
-        </div>
-      </a>
-      <div style="clear: both;"></div>
-
-      <a href="https://discord.gg/sd62gjV" target="_blank" class="tilelink">
-        <div class="tile4">
-          <img src="img/discordbanner.png" width="460" height="122">
-        </div>
-      </a>
-    </div>
-    <div class="square">
-      <div class="tile5">
-        <iframe width="460" height="284" src="https://www.youtube.com/embed/ED2fVv4NF_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <header>
+    <div><a href="index.html" style="color: #ffffff; text-decoration: none;">Kamack38</a></div>
+    <div id="zegar">12:00:00</div>
+  </header>
+  <main>
+    <a href="aboutme.html" class="at">
+      <div class="tile t1">
+        <i class="icon-user"></i><br />O mnie
       </div>
-      <a href="https://www.youtube.com/channel/UCyO3DTKTf_agdJjB-dUQ0QA" target="_blank" class="tilelink">
-        <div class="yt">
-          <i class="icon-youtube"></i>
-        </div>
-      </a>
-      <a href="https://www.twitch.tv/kamack38" target="_blank" class="tilelink">
-        <div class="th">
-          <i class="icon-twitch"></i>
-        </div>
-      </a>
-      <a href="https://twitter.com/kamack38" target="_blank" class="tilelink">
-        <div class="tw">
-          <i class="icon-twitter"></i>
-        </div>
-      </a>
-      <a href="https://steamcommunity.com/id/kamack38/" target="_blank" class="tilelink">
-        <div class="st">
-          <i class="icon-steam"></i>
-        </div>
-      </a>
-      <div style="clear: both;"></div>
+    </a>
+
+    <a href="files.html" class="at">
+      <div class="tile t1">
+        <i class="icon-doc"></i><br />Pliki
+      </div>
+    </a>
+
+    <div class="tile vd">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JV_aIyWbHjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div style="clear: both;"></div>
 
-    <div class="rectangle">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy  
-<i class="icon-mail"></i> kamack38.biznes@gmail.com</div>
+    <a href="https://github.com/kamack38" target="_blank" class="at">
+      <div class="tile gt">
+        <i class="icon-github-circled"></i><br />Mój GitHUB
+      </div>
+    </a>
 
+    <a href="https://kamack38shop.90.pl/" target="_blank" class="at">
+      <div class="tile sel">
+        <img src="img/selino.png" width="100" height="100"><br />Sklep z Koszulkami
+      </div>
+    </a>
 
-  </div>
+    <a href="https://discord.gg/sd62gjV" target="_blank" class="adc">
+      <div class="tile dc">
+      </div>
+    </a>
+
+    <a href="https://www.youtube.com/channel/UCyO3DTKTf_agdJjB-dUQ0QA" target="_blank" class="as">
+      <div class="tile yt">
+        <i class="icon-youtube"></i>
+      </div>
+    </a>
+
+    <a href="https://www.twitch.tv/kamack38" target="_blank" class="as">
+      <div class="tile th">
+        <i class="icon-twitch"></i>
+      </div>
+    </a>
+
+    <a href="https://twitter.com/kamack38" target="_blank" class="as">
+      <div class="tile tw">
+        <i class="icon-twitter"></i>
+      </div>
+    </a>
+
+    <a href="https://steamcommunity.com/id/kamack38/" target="_blank" class="as">
+      <div class="tile st">
+        <i class="icon-steam"></i>
+      </div>
+    </a>
+  </main>
+  <footer>2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i class="icon-mail"></i>
+    <a id="mail" href="mailto:kamack38@gmail.com">kamack38.biznes@gmail.com</a></footer>
 </body>
 
 </html>
