--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body onload="odliczanie();">
   <header>
-    <div><a href="index.html" style="color: #ffffff; text-decoration: none;">Kamack38</a></div>
+    <div><a href="index.html" class="link">Kamack38</a></div>
     <div id="zegar">12:00:00</div>
   </header>
   <main>
