--- a/files.html
+++ b/files.html
@@ -62,7 +62,7 @@
           </div>
         </a>
   </article>
-  <footer>2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i class="icon-mail"></i>
+  <footer style="padding-top: 2rem;">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i class="icon-mail"></i>
     <a id="mail" href="mailto:kamack38@gmail.com">kamack38.biznes@gmail.com</a></footer>
 
   </div>
