--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
 
 </head>
 
-<body onload="odliczanie();">
-  <header>
-    <div><a href="index.html" class="link">Kamack38</a></div>
-    <div id="zegar">12:00:00</div>
-  </header>
+<body>
   <main>
     <a href="aboutme.html" class="at">
       <div class="tile t1">
