--- a/aboutme.html
+++ b/aboutme.html
@@ -42,8 +42,8 @@
     O mnie
   </header>
 
-  <p>Hej! Cześć! Witajcie z tej strony Kamack38. Mam 13 lat i mam na imię Krzysztof. Mieszkam w centrum Wrocławia.
-    Lubię grać w gry między innymi Counter Strike:Global Offensive, Minecraft, Satisfactory, GTA V i wiele innych...
+  <p>Hej! Cześć! Witajcie z tej strony Kamack38. Mam 15 lat i mam na imię Krzysztof. Mieszkam w centrum Wrocławia.
+    Lubię grać w gry między innymi Counter Strike:Global Offensive, Minecraft, Satisfactory, GTA V i wiele, wiele innych...
     Właśnie dlatego zacząłem nagrywać do YouTube.</p>
   </article>
 
