--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     </a>
 
     <div class="tile vd">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JV_aIyWbHjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JV_aIyWbHjw" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     </div>
 
     <a href="https://github.com/kamack38" target="_blank" class="at">
@@ -88,7 +90,19 @@
     </a>
   </main>
   <footer>2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i class="icon-mail"></i>
-    <a id="mail" href="mailto:kamack38@gmail.com">kamack38.biznes@gmail.com</a></footer>
+    <a id="mail" href="mailto:kamack38@gmail.com">kamack38.biznes@gmail.com</a>
+  </footer>
+
+  <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+  <script>
+    kofiWidgetOverlay.draw('kamack38', {
+      'type': 'floating-chat',
+      'floating-chat.donateButton.text': 'Support me',
+      'floating-chat.donateButton.background-color': '#00b9fe',
+      'floating-chat.donateButton.text-color': '#fff'
+    });
+  </script>
+
 </body>
 
 </html>
