--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kamack38 | Youtube | Polska</title>
   <meta name="description" content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!" />
-  <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
+  <meta name="keywords" content="polska, poland, gaming, satisfactory, minecraft, film, kamack38, csgo, yt, youtube" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <link rel="shortcut icon" href="img/LogoT.png">
   <link rel="stylesheet" href="style.css" type="text/css" />
   <link rel="stylesheet" href="css/fontello.css" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
 
   <script>
     var currentTitle = document.title;
@@ -28,7 +27,6 @@
 </head>
 
 <body>
-  <div></div>
   <main>
     <a href="aboutme.html" class="at">
       <div class="tile t1">
