Add defer atribute

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="style.css" type="text/css" />
   <link rel="stylesheet" href="css/fontello.css" type="text/css" />
 
-  <script>
+  <script defer>
     var currentTitle = document.title;
 
     window.onblur = function () {
