--- a/aboutme.html
+++ b/aboutme.html
@@ -1,55 +1,66 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="pl">
+  <head>
+    <meta charset="utf-8" />
+    <title>Kamack38 | Youtube | Polska</title>
+    <meta
+      name="description"
+      content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!"
+    />
+    <meta
+      name="keywords"
+      content="minecrraft, film, kamack38, csgo, yt, youtube"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <title>Kamack38 | Youtube | Polska</title>
-  <meta name="description" content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!" />
-  <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png">
-  <link rel="stylesheet" href="style.css" type="text/css" />
-  <link rel="stylesheet" href="css/fontello.css" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
+    <script src="js/timer.js"></script>
 
-  <script src="js/timer.js"></script>
+    <script>
+      var currentTitle = document.title;
 
-  <script>
-    var currentTitle = document.title;
+      window.onblur = function () {
+        document.title = "We daj suba :D";
+      };
 
-    window.onblur = function () {
-      document.title = "We daj suba :D";
-    }
+      window.onfocus = function () {
+        document.title = currentTitle;
+      };
+    </script>
+  </head>
 
-    window.onfocus = function () {
-      document.title = currentTitle;
-    }
-  </script>
+  <body onload="odliczanie();">
+    <header>
+      <div><a href="/" class="link">Kamack38</a></div>
+      <div id="zegar">12:00:00</div>
+    </header>
+    <article>
+      <a href="/" class="back">
+        <i class="icon-left-open"></i>Porót do Strony Głównej
+      </a>
+      <header id="csgo">O mnie</header>
 
-</head>
+      <p>
+        Hej! Cześć! Witajcie z tej strony Kamack38. Mam 15 lat i mam na imię
+        Krzysztof. Mieszkam w centrum Wrocławia. Lubię grać w gry między innymi
+        Counter Strike:Global Offensive, Minecraft, Satisfactory, GTA V i wiele,
+        wiele innych... Właśnie dlatego zacząłem nagrywać do YouTube.
+      </p>
+    </article>
 
-<body onload="odliczanie();">
-
-  <header>
-    <div><a href="index.html" class="link">Kamack38</a></div>
-    <div id="zegar">12:00:00</div>
-  </header>
-  <article>
-  <a href="index.html" class="back">
-    <i class="icon-left-open"></i>Porót do Strony Głównej
-  </a>
-  <header id="csgo">
-    O mnie
-  </header>
-
-  <p>Hej! Cześć! Witajcie z tej strony Kamack38. Mam 15 lat i mam na imię Krzysztof. Mieszkam w centrum Wrocławia.
-    Lubię grać w gry między innymi Counter Strike:Global Offensive, Minecraft, Satisfactory, GTA V i wiele, wiele innych...
-    Właśnie dlatego zacząłem nagrywać do YouTube.</p>
-  </article>
-
-  <footer>2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i class="icon-mail"></i>
-    <a id="mail" href="mailto:kamack38@gmail.com">kamack38.biznes@gmail.com</a></footer>
-
-</body>
-
+    <footer>
+      2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i
+        class="icon-mail"
+      ></i>
+      <a id="mail" href="mailto:kamack38@gmail.com"
+        >kamack38.biznes@gmail.com</a
+      >
+    </footer>
+  </body>
 </html>
