--- a/files.html
+++ b/files.html
@@ -1,71 +1,92 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="pl">
+  <head>
+    <meta charset="utf-8" />
+    <title>Kamack38 | Youtube | Polska</title>
+    <meta
+      name="description"
+      content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!"
+    />
+    <meta
+      name="keywords"
+      content="minecrraft, film, kamack38, csgo, yt, youtube"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <title>Kamack38 | Youtube | Polska</title>
-  <meta name="description" content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!" />
-  <meta name="keywords" content="minecrraft, film, kamack38, csgo, yt, youtube" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png">
-  <link rel="stylesheet" href="style.css" type="text/css" />
-  <link rel="stylesheet" href="css/fontello.css" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap" rel="stylesheet">
+    <script src="js/timer.js"></script>
 
-  <script src="js/timer.js"></script>
+    <script>
+      var currentTitle = document.title;
 
-  <script>
-    var currentTitle = document.title;
+      window.onblur = function () {
+        document.title = "We daj suba :D";
+      };
 
-    window.onblur = function () {
-      document.title = "We daj suba :D";
-    }
+      window.onfocus = function () {
+        document.title = currentTitle;
+      };
+    </script>
+  </head>
 
-    window.onfocus = function () {
-      document.title = currentTitle;
-    }
-  </script>
-
-</head>
-
-<body onload="odliczanie();">
-
-  <div id="container">
-
-    <header>
-      <div><a href="index.html" class="link">Kamack38</a></div>
-      <div id="zegar">12:00:00</div>
-    </header>
-    <article>
-      <a href="index.html" class="back">
-        <i class="icon-left-open"></i>Porót do Strony Głównej
-      </a>
-      <header id="csgo">
-        <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" class="link" target="_blank">
-          CS:GO
-        </a>
+  <body onload="odliczanie();">
+    <div id="container">
+      <header>
+        <div><a href="/" class="link">Kamack38</a></div>
+        <div id="zegar">12:00:00</div>
       </header>
-      <a href="https://github.com/kamack38/csgo-config" target="_blank" class="link dw">
-        <div class="tile dw t1">
-          Ustawienia CS:GO
-        </div>
-      </a>
-
-      <header id="satis">
-        <a href="https://store.steampowered.com/app/526870/Satisfactory/" class="link" target="_blank">
-          Satisfactory
+      <article>
+        <a href="/" class="back">
+          <i class="icon-left-open"></i>Porót do Strony Głównej
         </a>
-      </header>
-        <a href="https://www.mediafire.com/file/sj8l7v1sx6km9s8/fg.sav/file" target="_blank" class="link dw">
-          <div class="tile dw t1">
-            Save
-          </div>
+        <header id="csgo">
+          <a
+            href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/"
+            class="link"
+            target="_blank"
+          >
+            CS:GO
+          </a>
+        </header>
+        <a
+          href="https://github.com/kamack38/csgo-config"
+          target="_blank"
+          class="link dw"
+        >
+          <div class="tile dw t1">Ustawienia CS:GO</div>
         </a>
-  </article>
-  <footer style="padding-top: 2rem;">2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i class="icon-mail"></i>
-    <a id="mail" href="mailto:kamack38@gmail.com">kamack38.biznes@gmail.com</a></footer>
 
-  </div>
-</body>
-
+        <header id="satis">
+          <a
+            href="https://store.steampowered.com/app/526870/Satisfactory/"
+            class="link"
+            target="_blank"
+          >
+            Satisfactory
+          </a>
+        </header>
+        <a
+          href="https://www.mediafire.com/file/sj8l7v1sx6km9s8/fg.sav/file"
+          target="_blank"
+          class="link dw"
+        >
+          <div class="tile dw t1">Save</div>
+        </a>
+      </article>
+      <footer style="padding-top: 2rem">
+        2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i
+          class="icon-mail"
+        ></i>
+        <a id="mail" href="mailto:kamack38@gmail.com"
+          >kamack38.biznes@gmail.com</a
+        >
+      </footer>
+    </div>
+  </body>
 </html>
