--- a/index.html
+++ b/index.html
@@ -1,106 +1,123 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="pl">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Kamack38 | Youtube | Polska</title>
+    <meta
+      name="description"
+      content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!"
+    />
+    <meta
+      name="keywords"
+      content="polska, poland, gaming, satisfactory, minecraft, film, kamack38, csgo, yt, youtube"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="shortcut icon" href="img/LogoT.png" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="css/fontello.css" type="text/css" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kamack38 | Youtube | Polska</title>
-  <meta name="description" content="Strona poświęcona Youtuberowi Kamack38. Wejdź i sprawdź!" />
-  <meta name="keywords" content="polska, poland, gaming, satisfactory, minecraft, film, kamack38, csgo, yt, youtube" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <link rel="shortcut icon" href="img/LogoT.png">
-  <link rel="stylesheet" href="style.css" type="text/css" />
-  <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+    <script defer>
+      var currentTitle = document.title;
 
-  <script defer>
-    var currentTitle = document.title;
+      window.onblur = function () {
+        document.title = "We daj suba :D";
+      };
 
-    window.onblur = function () {
-      document.title = "We daj suba :D";
-    }
+      window.onfocus = function () {
+        document.title = currentTitle;
+      };
+    </script>
+  </head>
 
-    window.onfocus = function () {
-      document.title = currentTitle;
-    }
-  </script>
+  <body>
+    <main>
+      <a href="aboutme" class="at">
+        <div class="tile t1"><i class="icon-user"></i><br />O mnie</div>
+      </a>
 
-</head>
+      <a href="files" class="at">
+        <div class="tile t1"><i class="icon-doc"></i><br />Pliki</div>
+      </a>
 
-<body>
-  <main>
-    <a href="aboutme.html" class="at">
-      <div class="tile t1">
-        <i class="icon-user"></i><br />O mnie
+      <div class="tile vd">
+        <iframe
+          width="100%"
+          height="100%"
+          src="https://www.youtube.com/embed/JV_aIyWbHjw"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
       </div>
-    </a>
 
-    <a href="files.html" class="at">
-      <div class="tile t1">
-        <i class="icon-doc"></i><br />Pliki
-      </div>
-    </a>
+      <a href="https://github.com/kamack38" target="_blank" class="at">
+        <div class="tile gt">
+          <i class="icon-github-circled"></i><br />Mój GitHUB
+        </div>
+      </a>
 
-    <div class="tile vd">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JV_aIyWbHjw" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-    </div>
+      <a href="https://kamack38shop.90.pl/" target="_blank" class="at">
+        <div class="tile sel">
+          <img src="img/selino.png" width="100" height="100" /><br />Sklep z
+          Koszulkami
+        </div>
+      </a>
 
-    <a href="https://github.com/kamack38" target="_blank" class="at">
-      <div class="tile gt">
-        <i class="icon-github-circled"></i><br />Mój GitHUB
-      </div>
-    </a>
+      <a href="https://discord.gg/sd62gjV" target="_blank" class="adc">
+        <div class="tile dc"></div>
+      </a>
 
-    <a href="https://kamack38shop.90.pl/" target="_blank" class="at">
-      <div class="tile sel">
-        <img src="img/selino.png" width="100" height="100"><br />Sklep z Koszulkami
-      </div>
-    </a>
+      <a
+        href="https://www.youtube.com/channel/UCyO3DTKTf_agdJjB-dUQ0QA"
+        target="_blank"
+        class="as"
+      >
+        <div class="tile yt">
+          <i class="icon-youtube"></i>
+        </div>
+      </a>
 
-    <a href="https://discord.gg/sd62gjV" target="_blank" class="adc">
-      <div class="tile dc">
-      </div>
-    </a>
+      <a href="https://www.twitch.tv/kamack38" target="_blank" class="as">
+        <div class="tile th">
+          <i class="icon-twitch"></i>
+        </div>
+      </a>
 
-    <a href="https://www.youtube.com/channel/UCyO3DTKTf_agdJjB-dUQ0QA" target="_blank" class="as">
-      <div class="tile yt">
-        <i class="icon-youtube"></i>
-      </div>
-    </a>
+      <a href="https://twitter.com/kamack38" target="_blank" class="as">
+        <div class="tile tw">
+          <i class="icon-twitter"></i>
+        </div>
+      </a>
 
-    <a href="https://www.twitch.tv/kamack38" target="_blank" class="as">
-      <div class="tile th">
-        <i class="icon-twitch"></i>
-      </div>
-    </a>
+      <a
+        href="https://steamcommunity.com/id/kamack38/"
+        target="_blank"
+        class="as"
+      >
+        <div class="tile st">
+          <i class="icon-steam"></i>
+        </div>
+      </a>
+    </main>
+    <footer>
+      2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i
+        class="icon-mail"
+      ></i>
+      <a id="mail" href="mailto:kamack38@gmail.com"
+        >kamack38.biznes@gmail.com</a
+      >
+    </footer>
 
-    <a href="https://twitter.com/kamack38" target="_blank" class="as">
-      <div class="tile tw">
-        <i class="icon-twitter"></i>
-      </div>
-    </a>
-
-    <a href="https://steamcommunity.com/id/kamack38/" target="_blank" class="as">
-      <div class="tile st">
-        <i class="icon-steam"></i>
-      </div>
-    </a>
-  </main>
-  <footer>2020 &copy; Kamack38 - website. Youtuber zaprasza do współpracy<i class="icon-mail"></i>
-    <a id="mail" href="mailto:kamack38@gmail.com">kamack38.biznes@gmail.com</a>
-  </footer>
-
-  <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-  <script>
-    kofiWidgetOverlay.draw('kamack38', {
-      'type': 'floating-chat',
-      'floating-chat.donateButton.text': 'Support me',
-      'floating-chat.donateButton.background-color': '#00b9fe',
-      'floating-chat.donateButton.text-color': '#fff'
-    });
-  </script>
-
-</body>
-
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+    <script>
+      kofiWidgetOverlay.draw("kamack38", {
+        type: "floating-chat",
+        "floating-chat.donateButton.text": "Support me",
+        "floating-chat.donateButton.background-color": "#00b9fe",
+        "floating-chat.donateButton.text-color": "#fff",
+      });
+    </script>
+  </body>
 </html>
