--- a/files.html
+++ b/files.html
@@ -12,7 +12,7 @@
       content="minecrraft, film, kamack38, csgo, yt, youtube"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="shortcut icon" href="https://i.imgur.com/iipSEa0.png" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="css/fontello.css" type="text/css" />
     <link
