--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="polska, poland, gaming, satisfactory, minecraft, film, kamack38, csgo, yt, youtube"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="shortcut icon" href="img/LogoT.png" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="css/fontello.css" type="text/css" />
 
@@ -45,6 +45,7 @@
           width="100%"
           height="100%"
           src="https://www.youtube.com/embed/JV_aIyWbHjw"
+          loading="lazy"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -60,7 +61,7 @@
 
       <a href="https://kamack38shop.90.pl/" target="_blank" class="at">
         <div class="tile sel">
-          <img src="img/selino.png" width="100" height="100" /><br />Sklep z
+          <img src="img/selino.webp" width="100" height="100" /><br />Sklep z
           Koszulkami
         </div>
       </a>
