--- a/files.html
+++ b/files.html
@@ -15,6 +15,9 @@
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap"
       rel="stylesheet"
