--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="css/fontello.css" type="text/css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato&display=swap"
+      rel="stylesheet"
+    />
+
     <script defer>
       var currentTitle = document.title;
 
